certain new extent sizes may crash the server

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Done
    • Priority: Major - P3
    • 2.1.1
    • Affects Version/s: 2.0.2
    • Component/s: Storage
    • None
    • Environment:
      32bit
    • ALL
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      If you attempt to set an oplog size of 512mb on a 32-bit system, the database will abort with an assert.
      This is due to the extent splitter code not using the same max-extent value that the extent creation code is using.
      Since it seems unlikely to create an extent size that fits between the two sizes, this bug doesn't affect many users. Note that the max extent size is affected by --smallfiles (and, by extension, 32-bit platforms).

            Assignee:
            Eric Milkie
            Reporter:
            Eric Milkie
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

              Created:
              Updated:
              Resolved: