SERVER-4864 avoid creating invalid extent sizes